--- a/preguntas-frecuentes/como-comprar/como-funciona-la-carro-de-compra.html
+++ b/preguntas-frecuentes/como-comprar/como-funciona-la-carro-de-compra.html
@@ -1,8 +1,9 @@
 <section class="categoria-menu">
   <div class="container">
     <div class="interior">
-      <h3>¿Cómo funciona la carro de compra?</h3>
-      <p>En el Carro de Compra almacenas todos los productos que deseas comprar, cada vez que elijas un producto y lo agregues a la Barro de Compras, el sistema registrará la cantidad y el artículo. A la hora de cancelar, podrás escoger si deseas actualizar las cantidades o sacar productos del carro de compra para finalmente enviar la orden de compra.</p>
+      <h3>¿Cómo funciona el Carro de Compras?</h3>
+      <p>En el Carro de Compras almacenas todos los productos que deseas comprar, cada vez que elijas un producto y lo agregues al carro de compras, el sistema registrará la cantidad y el artículo. 
+	  A la hora de cancelar, podrás escoger si deseas actualizar las cantidades o sacar productos del carro de compra para finalmente enviar la orden de compra.</p>
     </div>
   </div>
 </section>
