--- a/preguntas-frecuentes/como-comprar/cual-es-el-horario-de-venta-telefonica-y-servicio-al-cliente.html
+++ b/preguntas-frecuentes/como-comprar/cual-es-el-horario-de-venta-telefonica-y-servicio-al-cliente.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="interior">
       <h3>¿Cuál es el horario de Venta telefónica y servicio al cliente?</h3>
-      <p>El horario de atención es de 09:00 a 22:00 hrs de Lunes a Domingo.</p>
-      <p>El horario de atención de nuestro Call Center es de 08:00 a 21:00 hrs de lunes a domingo.</p>
+      <p>El horario de atención de venta telefonica es de 09:00 a 22:00 hrs de Lunes a Domingo.</p>
+      <p>El horario de atención de nuestro Call Center es de 08:00 a 21:00 hrs de Lunes a Domingo.</p>
     </div>
   </div>
 </section>
