--- a/preguntas-frecuentes/despachos/cuanto-tiempo-tengo-para-cambiar-o-devolver-mi-producto.html
+++ b/preguntas-frecuentes/despachos/cuanto-tiempo-tengo-para-cambiar-o-devolver-mi-producto.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="interior">
       <h3>¿Cuánto tiempo tengo para Cambiar o Devolver mi producto?</h3>
-      <p>Para los cambios tienes 30 días desde la fecha de compra o recepción del producto y 10 días para realizar la devolución. Debes presentar la boleta, el producto debe estar sin uso, con etiqueta adherida, en su embalaje original, sellado y con sus accesorios. Recuerda revisar tu producto al momento de su entrega.</p>
+      <p>Para los cambios tienes 30 días desde la fecha de compra o recepción del producto y 10 días para realizar la devolución. 
+	  Debes presentar la boleta, el producto debe estar sin uso, con etiqueta adherida, en su embalaje original, sellado y con sus accesorios. 
+	  Recuerda revisar tu producto al momento de su entrega.</p>
     </div>
   </div>
 </section>
