--- a/preguntas-frecuentes/despachos/donde-puedo-ver-la-informacion-la-tienda.html
+++ b/preguntas-frecuentes/despachos/donde-puedo-ver-la-informacion-la-tienda.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="interior">
       <h3>¿Dónde puedo ver la información la tienda?</h3>
-      <p>Si necesitas tener información de la tienda y horarios de atención haz click en el siguiente link</p>
+      <p>Si necesitas tener información de la tienda y horarios de atención haz click en el siguiente <a href="/contacto/tiendas"><strong>[Tiendas]</strong></a></p>
     </div>
   </div>
 </section>
