--- a/preguntas-frecuentes/despachos/recicambio.html
+++ b/preguntas-frecuentes/despachos/recicambio.html
@@ -19,5 +19,5 @@
 <!-- {breadcrumbs:[
 {title: "Preguntas Frecuentes", url: "preguntas-frecuentes"},
 {title: "Despachos", url:"preguntas-frecuentes/despachos"},
-{title: "¿Cómo puedo revisar el seguimiento de mis productos?", url: "preguntas-frecuentes/despachos/como-puedo-revisar-el-seguimiento-de-mis-productos"}
+{title: "Recicambio", url: "preguntas-frecuentes/despachos/recicambio"}
 ]} -->
