--- a/preguntas-frecuentes/devolucion/como-puedo-cambiar-o-devolver-productos.html
+++ b/preguntas-frecuentes/devolucion/como-puedo-cambiar-o-devolver-productos.html
@@ -18,8 +18,7 @@
         <strong>Retiro en tu Domicilio</strong>
       </p>
       <p>
-        Si no tienes un Paris cerca, llámanos al 600 400 8000 o desde
-        celulares al 02 2264 6701 para coordinar el retiro del
+        Si no tienes un Paris cerca, llámanos al 600 400 8000 para coordinar el retiro del
         producto que deseas cambiar o devolver.
       </p>
 
