--- a/preguntas-frecuentes/despachos/como-puedo-revisar-el-seguimiento-de-mis-productos.html
+++ b/preguntas-frecuentes/despachos/como-puedo-revisar-el-seguimiento-de-mis-productos.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="interior">
       <h3>¿Cómo puedo revisar el seguimiento de mis productos?</h3>
-      <p>Si necesitas conocer el estado de tu despacho o necesitas conocer el seguimiento de tu orden puede hacer click en el siguiente enlace (LINK TRACKING)</p>
+      <p>Si necesitas conocer el estado de tu despacho o necesitas conocer el seguimiento de tu orden puede hacer click en el siguiente enlace <a href="https://www.paris.cl/webapp/wcs/stores/servlet/AjaxTrackingOrderDetailView?catalogId=40000000629&tab=tienda&fromHeader=true&langId=-5&storeId=10801"><strong>[Seguimiento]</strong></a> </p>
     </div>
   </div>
 </section>
