--- a/preguntas-frecuentes/devolucion/como-puedo-devolver-un-producto.html
+++ b/preguntas-frecuentes/devolucion/como-puedo-devolver-un-producto.html
@@ -3,7 +3,7 @@
 
     <div class="interior">
       <h3>¿Cómo puedo devolver un producto?</h3>
-      <p>Si necesitas realizar una devolución puedes realizarlo directo en la tienda mas cercana, si es un producto de gran tamaño y requieres que sea retirado a tu domicilio llamanos al 600 400 8000, para mayor información haz click acá (DEVOLUCIONES)</p>
+      <p>Si necesitas realizar una devolución puedes realizarlo directo en la tienda mas cercana, si es un producto de gran tamaño y requieres que sea retirado a tu domicilio <a href="/ayuda-paris/contacto_full_page">[Contáctanos]</a>,</p>
     </div>
   </div>
 </section>
