--- a/preguntas-frecuentes/devolucion/el-producto-que-recibi-no-es-el-que-compre.html
+++ b/preguntas-frecuentes/devolucion/el-producto-que-recibi-no-es-el-que-compre.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="interior">
       <h3>El producto que recibí no es el que compre</h3>
-      <p>Si tienes problemas con tu compra, escríbenos en el siguiente link (FORMULARIO) y nos pondremos en contacto contigo, si necesitas mayor información puedes comunicarte con nosotros al  600 400 8000</p>
+      <p>Si tienes problemas con tu compra, escríbenos en el siguiente link <a href="/ayuda-paris/contacto_full_page">[Contáctanos]</a> y nos pondremos en contacto contigo, si necesitas mayor información puedes comunicarte con nosotros al  600 400 8000</p>
     </div>
   </div>
 </section>
