--- a/preguntas-frecuentes/mis-datos/como-me-registro-en-el-sitio.html
+++ b/preguntas-frecuentes/mis-datos/como-me-registro-en-el-sitio.html
@@ -4,8 +4,7 @@
       <h3>¿Cómo me registro en el sitio?</h3>
       <p>
         Es muy simple, podrás comprar aun sin no estas registrado en
-        nuestra página. Para registrarte en el sitio, hazlo aquí.
-        (REGISTRO)
+        nuestra página. Para registrarte en el sitio, hazlo aquí <a href="https://www.paris.cl/webapp/wcs/stores/servlet/Logoff?new=Y&catalogId=40000000629&myAcctMain=1&langId=-5&storeId=10801">[Registro]</a>
       </p>
     </div>
   </div>
@@ -17,3 +16,5 @@
 {title: "Mis Datos/Registro", url:"preguntas-frecuentes/mis-datos"},
 {title: "¿Cómo me registro en el sitio?", url: "preguntas-frecuentes/mis-datos/como-me-registro-en-el-sitio"}
 ]} -->
+
+https://www.paris.cl/webapp/wcs/stores/servlet/Logoff?new=Y&catalogId=40000000629&myAcctMain=1&langId=-5&storeId=10801
