--- a/informacion/preguntas-frecuentes.html
+++ b/informacion/preguntas-frecuentes.html
@@ -225,7 +225,7 @@
           </button>
           <div class="tabcontent__expadning-container">
 			<p>Para revisar los avances de tu orden y conocer el estado de tu despacho ingresa al siguiente 
-			enlace <a href="https://www.paris.cl/webapp/wcs/stores/servlet/AjaxTrackingOrderDetailView?catalogId=40000000629&amp;tab=tienda&amp;fromHeader=true&amp;langId=-5&amp;storeId=10801" target="_blank">Seguimiento de tu Orden</a></p>
+			enlace <a href="https://www.paris.cl/webapp/wcs/stores/servlet/AjaxTrackingOrderDetailView?catalogId=40000000629&amp;tab=tienda&amp;fromHeader=true&amp;langId=-5&amp;storeId=10801" target="_blank"><strong>[Seguimiento de tu Orden]</strong></a></p>
           </div>
 
           <button class="accordion">
@@ -534,7 +534,7 @@
             <p>
 			Si necesitas realizar una devolución puedes realizarlo directo en la tienda mas cercana, 
 			si es un producto de gran tamaño y requieres que sea retirado a tu domicilio llamanos al <a href="tel:6004008000">600 400 8000</a>, 
-			para mayor información haz click <a href="/despacho-reagenda-o-anula-tu-compra">acá</a></p>
+			para mayor información haz click <a href="/despacho-reagenda-o-anula-tu-compra"><strong>[Devoluciones]</strong></a></p>
             </p>
           </div>
 
@@ -543,7 +543,7 @@
           </button>
           <div class="tabcontent__expadning-container">
 			<p>
-			Si tienes problemas con tu compra, escríbenos en la siguiente opción <a href="/ayuda-paris/contacto/formulario-contacto">[contáctanos]</a> y nos pondremos en contacto contigo	
+			Si tienes problemas con tu compra, escríbenos en la siguiente opción <a href="/ayuda-paris/contacto/formulario-contacto"><strong>[contáctanos]</strong></a> y nos pondremos en contacto contigo	
             </p>
           </div>
 
@@ -562,9 +562,7 @@
             <br />
             <h4>Retiro en tu Domicilio</h4>
             <p>
-              Si no tienes un Paris cerca, llámanos al
-              <a href="tel:6004008000">600 400 8000</a> o desde celulares al
-              <a href="#" class="red">02 2264 6701</a> para coordinar el retiro del producto que deseas cambiar o devolver.
+              Si tu producto es pequeño puedes devolverlo en tiendas, pero si el producto es de gran tamaño, contactanos completando una solicitud de devolución indicando en detalle tu requerimiento en el siguiente <a href="/ayuda-paris/contacto_full_page">[Formulario]</a> para coordinar el retiro del producto que deseas cambiar o devolver.
             </p>
             <br />
             <h4>Condiciones para devolver un producto</h4>
@@ -584,9 +582,8 @@
           </button>
           <div class="tabcontent__expadning-container">
             <p>
-              ¡No te preocupes! Si tu producto está en perfecto estado tienes 10 días para anular tu compra. Sólo debes presentar tu producto con la boleta, en cualquiera de nuestras tiendas. En el caso de productos de difícil traslado te ofrecemos el retiro a domicilio
-              llamando al
-              <a href="tel:6004008000">600 400 8000</a> sólo costeando el valor del transporte.
+              ¡No te preocupes! Si tu producto está en perfecto estado tienes 10 días para anular tu compra. Sólo debes presentar tu producto con la boleta, en cualquiera de nuestras tiendas. En el caso de productos de difícil traslado 
+			  te ofrecemos el retiro a domicilio (sólo costeando el valor del transporte.), solo debes presionar en <a href="/ayuda-paris/contacto_full_page">[Contáctanos]</a> para gestionar el retiro del producto, debes especificar y detallar tu requerimiento
             </p>
           </div>
 
@@ -599,12 +596,11 @@
               la forma en que recibirás tu reembolso.
             </p>
             <p>
-              Si realizaste tu compra con
-              <strong>Tarjetas Cencosud</strong> el dinero será reembolsado en 72 horas hábiles.
+              Si realizaste tu compra con <strong>Tarjetas Cencosud</strong> el dinero será reembolsado en 72 horas hábiles.
             </p>
-            <p>
-              Si usaste otras <strong>tarjetas de crédito</strong>, la devolución se realizará en un período máximo de 10 días hábiles.
-            </p>
+            <p> 
+			Si usaste otras <strong>tarjetas de crédito</strong>, la devolución se realizará en un período máximo de 10 días hábiles. 
+			</p>
             <p>
               Si ocupaste una <strong>Tarjeta de débito</strong> se hará la devolución del dinero a la Cuenta Corriente correspondiente o se realizará un Vale Vista, dependiendo del banco emisor el plazo máximo para la devolución será de 15 días hábiles.
             </p>
