--- a/preguntas-frecuentes/como-comprar/como-comprar.html
+++ b/preguntas-frecuentes/como-comprar/como-comprar.html
@@ -3,24 +3,34 @@
 
     <div class="interior">
       <h3>¿Cómo Comprar?</h3>
-      <p><strong>¿Eres cliente nuevo?</strong></p>
-      <p>Si aún no has comprado en nuestro sitio te invitamos a conocer algunos de los beneficios que tenemos para ti:</p>
-      <ul>
-        <li>Compra rápido sin tener que registrarte.</li>
-        <li>Acceso a descuentos exclusivos.</li>
-        <li>Diferentes tipos de despacho para que elijas el que más te acomode.</li>
-        <li>Devolución simple y Rápida.</li>
-      </ul>
-
-      <p><strong>¿Cómo comprar?</strong></p>
-      <p>Es muy simple podrás comprar sin registrarte o si estás registrado sólo deberás realizar los siguientes pasos:</p>
-
-      <ul>
-        <li>Regístrate en Paris.cl. Si aún no estás inscrito, hazlo aquí</li>
-        <li>Agrega el producto a tu carro. Aquí podrás ver el listado de los productos que has elegido, actualizar las cantidades o sacarlos.</li>
-        <li>Confirma tus datos de Despacho.</li>
-        <li>Elige tu forma de Pago.</li>
-      </ul>
+		<h4>¿Eres cliente nuevo?</h4>
+            <p>
+              Si aún no has comprado por Paris.cl te invitamos a conocer algunos de los beneficios que tenemos para ti:
+            </p>
+            <ul>
+              <li>Compra rápido sin tener que registrarte.</li>
+              <li>Acceso a descuentos exclusivos.</li>
+              <li>
+                Diferentes tipos de despacho para que elijas el que más te acomode.
+              </li>
+              <li>Devolución simple y Rápida.</li>
+            </ul>
+            <br>
+            <h4>¿Cómo comprar?</h4>
+            <p>
+              Es muy simple podrás comprar sin registrarte o si estás registrado sólo deberás realizar los siguientes pasos:
+            </p>
+            <ul>
+              <li>
+                Regístrate en nuestro sitio, si aún no estás inscrito, hazlo aquí
+                <a href="https://www.paris.cl/webapp/wcs/stores/servlet/Logoff?new=Y&amp;catalogId=40000000629&amp;myAcctMain=1&amp;langId=-5&amp;storeId=10801"><strong>[Registrarme]</strong></a>
+              </li>
+              <li>
+                Agrega el producto a tu carro. Aquí podrás ver el listado de los productos que has elegido, actualizar las cantidades o sacarlos.
+              </li>
+              <li>Confirma tus datos de Despacho.</li>
+              <li>Elige tu forma de Pago.</li>
+            </ul>
 
     </div>
   </div>
