--- a/preguntas-frecuentes/como-comprar/como-establezco-las-cantidades-del-producto-que-quiero.html
+++ b/preguntas-frecuentes/como-comprar/como-establezco-las-cantidades-del-producto-que-quiero.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="interior">
       <h3>¿Cómo establezco las cantidades del producto que quiero?</h3>
-      <p>En tu carro de compras, al hacer click en actualizar podrás establecer la cantidad de cada producto que llevas. El sistema asume por defecto 1 unidad.</p>
+      <p>En tu <strong>carro de compras</strong>, al hacer click en actualizar podrás establecer la cantidad de cada producto que llevas. El sistema asume por defecto 1 unidad.</p>
     </div>
   </div>
 </section>
