--- a/preguntas-frecuentes/como-comprar/cuales-son-las-formas-de-pago.html
+++ b/preguntas-frecuentes/como-comprar/cuales-son-las-formas-de-pago.html
@@ -21,7 +21,7 @@
       <p>Las tarjetas de regalo tienen un monto en pesos para realizar compras en nuestras tiendas y en www.paris.cl. Podrás ocupar el dinero total de tu tarjeta en una compra o utilizar sólo una parte. Además, si el producto que quieres sobrepasa el monto de tu Gift Card podrás usar otro medio de pago para complementar.</p>
       <p>En paris.cl sólo podrás utilizar las Gift Card Cencosud, 2.0 y Paris Empresas como medio de pago. Las Gift Card Paris que venden en nuestras tiendas no son válidas para nuestro sitio web.</p>
 
-      <p><strong>Puntos</strong></p>
+      <p><strong>Puntos Cencosud</strong></p>
       <p>Podrás realizar compras con puntos sólo en nuestras tiendas. Para hacer efectivo el canje debes presentar tu cedula de identidad en caja. Cada punto que uses equivale a un peso, por ejemplo, si canjeas 5.000 puntos, equivale a $5.000 de tu compra.</p>
     </div>
   </div>
