--- a/preguntas-frecuentes/como-comprar/identificacion-de-tu-medio-de-pago-en-nuestro-sitio.html
+++ b/preguntas-frecuentes/como-comprar/identificacion-de-tu-medio-de-pago-en-nuestro-sitio.html
@@ -1,8 +1,8 @@
 <section class="categoria-menu">
   <div class="container">
     <div class="interior">
-      <h3>Identificación de tu medio de pago en nuestro sitio</h3>
-      <p>Paris.cl utiliza un sistema que proporciona la empresa CyberSource Inc (propiedad de Visa Inc.)  que posee estándar internacional de seguridad “PCI Compliance”, y que le permite a Cybersource identificar la información de tarjetas de crédito en todo el mundo para procesar pagos, mientras la tarjeta se encuentre vigente. Este sistema necesita siempre previa autorización del usuario. Este sistema asigna al medio de pago escogido por el cliente para comprar en Paris.cl, una identificación única que le permite efectuar nuevas compras o pagos con esa misma tarjeta de crédito  sin necesidad de volver a ingresar o digitar sus datos, bastando que el usuario la seleccione como medio de pago. Esta identificación del medio de pago puede ser eliminada en cualquier momento que el usuario lo desee.”</p>
+      <h3>Seguridad e Identificación de tu medio de pago</h3>
+      <p>Paris.cl utiliza un sistema que proporciona la empresa CyberSource Inc (propiedad de Visa Inc.)  que posee estándar internacional de seguridad “PCI Compliance”, y que le permite a Cybersource identificar la información de tarjetas de crédito en todo el mundo para procesar pagos, mientras la tarjeta se encuentre vigente. Este sistema necesita siempre previa autorización del usuario. Este sistema asigna al medio de pago escogido por el cliente para comprar en Paris.cl, una identificación única que le permite efectuar nuevas compras o pagos con esa misma tarjeta de crédito  sin necesidad de volver a ingresar o digitar sus datos, bastando que el usuario la seleccione como medio de pago. Esta identificación del medio de pago puede ser eliminada en cualquier momento que el usuario lo desee.</p>
     </div>
   </div>
 </section>
