--- a/preguntas-frecuentes/como-comprar/los-precios-son-los-mismos-que-en-tiendas.html
+++ b/preguntas-frecuentes/como-comprar/los-precios-son-los-mismos-que-en-tiendas.html
@@ -3,7 +3,7 @@
     <div class="interior">
       <h3>¿Los precios son los mismos que en tiendas?</h3>
       <p>Los precios publicados en el sitio son exclusivos para Paris.cl y Venta Telefónica. En Paris.cl podrás encontrar diversas ofertas, descuentos y promociones.</p>
-      <p>Las Ofertas son válidas sólo para consumo familiar. Los precios publicados ya tienen incluido el IVA.</p>
+      <p>Las ofertas son válidas sólo para consumo familiar. Los precios publicados ya tienen incluido el IVA.</p>
     </div>
   </div>
 </section>
