--- a/preguntas-frecuentes/como-comprar/puedo-pedir-factura.html
+++ b/preguntas-frecuentes/como-comprar/puedo-pedir-factura.html
@@ -3,7 +3,7 @@
     <div class="interior">
       <h3>¿Puedo pedir factura?</h3>
       <p>Sí, durante el proceso de compra podrás seleccionar la opción Factura.</p>
-      <p>La factura es Electrónica, esta será enviada al correo electrónico que indiques en la Orden de Compra.</p>
+      <p>La factura es Electrónica, esta será enviada al correo electrónico asociado a tu cuenta al momento de validar y confirmar tu compra.</p>
       <p><small>Nota: Esta opción no está disponible para productos de regalos de Novios o Bebés o pagando con Gift Card.</small></p>
     </div>
   </div>
