--- a/preguntas-frecuentes/como-comprar/puedo-realizar-compras-desde-el-extranjero.html
+++ b/preguntas-frecuentes/como-comprar/puedo-realizar-compras-desde-el-extranjero.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="interior">
       <h3>¿Puedo realizar compras desde el extranjero?</h3>
-      <p>Podrás realizar tus compras desde el extranjero para despachar dentro de Chile marcando el teléfono (562) 8623351 y pagando con Mastercard, Visa, American Express o Diners Club emitidas en Chile.</p>
+      <p>Podrás realizar tus compras desde el extranjero para despachar <strong>dentro de Chile<strong> marcando el teléfono 600 400 6400 y podras pagar con tarjetas Mastercard, Visa, American Express o Diners Club emitidas en Chile.</p>
     </div>
   </div>
 </section>
