--- a/preguntas-frecuentes/como-comprar/que-pasa-si-me-duplican-el-cobro.html
+++ b/preguntas-frecuentes/como-comprar/que-pasa-si-me-duplican-el-cobro.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="interior">
       <h3>¿Qué pasa si me duplican el cobro?</h3>
-      <p>Si haz generado dos Órdenes de Compra y necesitas anular una de ellas comunícate con nuestro Servicio al Cliente.</p>
-      <p>Si realizaste una Orden de Compra y se duplicó el cobro de tu compra deberás llamar a nuestro Servicio al Cliente.</p>
-      <p>Si tu solicitud de compra no finalizó pero igual generó un cobro, en 48 hrs., el cargo será reversado por la entidad bancaria, si esto no es efectivo, comunícate con Servicio al Cliente.</p>
+      <p>Si haz generado <strong> dos Órdenes de Compra </strong> y necesitas anular una de ellas comunícate con nuestro Servicio al Cliente.</p>
+      <p>Si realizaste <strong>una Orden de Compra</strong> y se duplicó el cobro de tu compra deberás llamar a nuestro Servicio al Cliente.</p>
+      <p>Si tu solicitud de compra no finalizó pero igual generó un cobro, <strong>en 48 hrs. el cargo será reversado </strong> de forma automatica por la entidad bancaria, si transcurrido este plazo esto no es efectivo comunícate con nuestro Servicio al Cliente.</p>
     </div>
   </div>
 </section>
