--- a/preguntas-frecuentes/devolucion/te-arrepentiste-de-tu-compra.html
+++ b/preguntas-frecuentes/devolucion/te-arrepentiste-de-tu-compra.html
@@ -3,7 +3,8 @@
 
     <div class="interior">
       <h3>¿Te arrepentiste de tu compra?</h3>
-      <p>¡No te preocupes! Si tu producto está en perfecto estado tienes 10 días para anular tu compra. Sólo debes presentar tu producto con la boleta, en cualquiera de nuestras tiendas. En el caso de productos de difícil traslado te ofrecemos el retiro a domicilio llamando al 600 400 8000 sólo costeando el valor del transporte.</p>
+      <p>¡No te preocupes! Si tu producto está en perfecto estado tienes 10 días para anular tu compra. Sólo debes presentar tu producto con la boleta, en cualquiera de nuestras tiendas. 
+	  En el caso de productos de difícil traslado te ofrecemos el retiro a domicilio (sólo costeando el valor del transporte.), solo debes presionar en <a href="/ayuda-paris/contacto_full_page">[Contáctanos]</a> para gestionar el retiro del producto, debes especificar y detallar tu requerimiento</p>
     </div>
   </div>
 </section>
