--- a/contacto/tiendas.html
+++ b/contacto/tiendas.html
@@ -8,22 +8,22 @@
           <button class="show_tiendas" data-id="#Arica">
                       Arica
                     </button>
-          <button class="show_tiendas" data-id="Iquique">
+          <button class="show_tiendas" data-id="#Iquique">
                       Iquique
                     </button>
-          <button class="show_tiendas" data-id="Calama">
+          <button class="show_tiendas" data-id="#Calama">
                       Calama
                     </button>
-          <button class="show_tiendas" data-id="Antofagasta">
+          <button class="show_tiendas" data-id="#Antofagasta">
                       Antofagasta
                     </button>
-          <button class="show_tiendas" data-id="Copiapo">
+          <button class="show_tiendas" data-id="#Copiapo">
                       Copiapó
                     </button>
-          <button class="show_tiendas" data-id="Serena">
+          <button class="show_tiendas" data-id="#Serena">
                       Mall Serena
                     </button>
-          <button class="show_tiendas" data-id="Ovalle">
+          <button class="show_tiendas" data-id="#Ovalle">
                       Ovalle
                     </button>
         </div>
@@ -172,6 +172,7 @@
                       Puerto Montt
                     </button>
         </div>
+		
       </div>
     </div>
   </div>
